# onkos

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE-DATASET  README.md  pyproject.toml
dashboard/: app.py
docs/: dataset-health.md  validation-landmarks.md
notebooks/: 01_virtual_trial_divergence.ipynb  02_exposure_response.ipynb  03_tumor_context_library.ipynb  04_preclinical_translation.ipynb  05_immuno_oncology.ipynb  06_parameter_uncertainty.ipynb  07_tgi_metrics.ipynb  08_sensitivity.ipynb  09_survival_endpoints.ipynb  10_cox_survival.ipynb  11_line_of_therapy.ipynb  12_pk_composability.ipynb  13_kill_mechanism.ipynb  14_model_averaging.ipynb  15_practical_identifiability.ipynb  16_combination_interaction.ipynb  17_mechanistic_resistance.ipynb  18_survival_metric_choice.ipynb  19_model_selection_budget.ipynb  20_recist_response_orr.ipynb  21_duration_of_response.ipynb  22_cross_context_generalization.ipynb  23_pfs_endpoint.ipynb  24_optimal_design.ipynb  25_acquired_resistance.ipynb  26_burden_auc_bridge_metric.ipynb  27_joint_survival.ipynb  28_loewe_additivity.ipynb  29_dose_response_extrapolation.ipynb  30_early_surrogate_timing.ipynb  31_model_discriminability.ipynb  32_model_selection_atlas.ipynb  33_growth_laws.ipynb  34_power_law_growth.ipynb
scripts/: make_figures.py  sync_dataset_into_package.py
tests/: test_acquired.py  test_architecture.py  test_atlas.py  test_audit.py  test_budget.py  test_burden_auc.py  test_cli.py  test_combine.py  test_context_library.py  test_cox.py  test_dataset.py  test_design.py  test_discriminability.py  test_dose_response.py  test_duration.py  test_early_surrogate.py  test_exposure_response.py  test_identifiability.py  test_immuno_oncology.py  test_interaction.py  test_joint.py  test_jsonld.py  test_landmarks.py  test_line_of_therapy.py  test_loewe.py  test_metrics.py  test_norton_simon.py  (+13 more)
(+136 files in other folders)
