[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onkos"
version = "0.41.0"
description = "Curated, citation-backed, tier-annotated dataset of tumor-growth-inhibition (TGI) and TGI→survival models for oncology drug development."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Clay Good" }]
keywords = ["oncology", "pharmacometrics", "tumor-growth-inhibition", "TGI", "NONMEM", "SBML", "PharmML", "survival", "QSP"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.30", "matplotlib>=3.6", "pandas>=1.5"]
dev = ["pytest>=7.0", "nbmake>=1.4", "matplotlib>=3.6", "ruff>=0.4", "rdflib>=6.0"]

[project.scripts]
onkos = "onkos.cli:main"

[project.urls]
Homepage = "https://github.com/clay-good/onkos"
Repository = "https://github.com/clay-good/onkos"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
onkos = ["_dataset/**/*.json", "_dataset/**/*.jsonld", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # rdflib's JSON-LD parser uses a deprecated rdflib internal; not ours.
    "ignore:ConjunctiveGraph is deprecated:DeprecationWarning",
]
